[gd_scene load_steps=4 format=2]

[ext_resource path="res://Interface/Theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/UI Element/metalPanel_blue.png" type="Texture" id=2]
[ext_resource path="res://Interface/NextLevelContainer.gd" type="Script" id=4]

[node name="NextLevel" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevelContainer" type="NinePatchRect" parent="Control/CenterContainer" groups=[
"NextLevel",
]]
margin_left = 362.0
margin_top = 200.0
margin_right = 662.0
margin_bottom = 400.0
rect_min_size = Vector2( 300, 200 )
texture = ExtResource( 2 )
patch_margin_left = 12
patch_margin_top = 40
patch_margin_right = 12
patch_margin_bottom = 12
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer/NextLevelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 30.0
margin_right = -12.0
margin_bottom = -12.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShootPoint" type="CenterContainer" parent="Control/CenterContainer/NextLevelContainer/VBoxContainer"]
margin_right = 276.0
margin_bottom = 31.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer/NextLevelContainer/VBoxContainer/ShootPoint"]
margin_left = 41.0
margin_right = 235.0
margin_bottom = 31.0
alignment = 1

[node name="Label" type="Label" parent="Control/CenterContainer/NextLevelContainer/VBoxContainer/ShootPoint/VBoxContainer"]
margin_right = 194.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Shoot Point"
align = 1

[node name="ItemList" type="ItemList" parent="Control/CenterContainer/NextLevelContainer/VBoxContainer/ShootPoint/VBoxContainer"]
margin_top = 31.0
margin_right = 194.0
margin_bottom = 31.0
rect_min_size = Vector2( 194, 0 )
auto_height = true
max_columns = 3
fixed_column_width = 54

[node name="BtnNextContaier" type="CenterContainer" parent="Control/CenterContainer/NextLevelContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 276.0
margin_bottom = 96.0

[node name="GridContainer" type="GridContainer" parent="Control/CenterContainer/NextLevelContainer/VBoxContainer/BtnNextContaier"]
margin_left = 25.0
margin_right = 250.0
margin_bottom = 35.0
columns = 2

[node name="NextLevelButton" type="Button" parent="Control/CenterContainer/NextLevelContainer/VBoxContainer/BtnNextContaier/GridContainer"]
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 35, 35 )

[node name="Label" type="Label" parent="Control/CenterContainer/NextLevelContainer/VBoxContainer/BtnNextContaier/GridContainer"]
margin_left = 39.0
margin_top = 4.0
margin_right = 225.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "next level"

[node name="Timer" type="Timer" parent="Control/CenterContainer/NextLevelContainer"]
one_shot = true
[connection signal="pressed" from="Control/CenterContainer/NextLevelContainer/VBoxContainer/BtnNextContaier/GridContainer/NextLevelButton" to="Control/CenterContainer/NextLevelContainer" method="_on_NextLevelButton_pressed"]
[connection signal="timeout" from="Control/CenterContainer/NextLevelContainer/Timer" to="Control/CenterContainer/NextLevelContainer" method="_on_Timer_timeout"]
